# AvalonK

./: README.md
.sealed/: .sealed.data.6dc6026a4c36d7f520b76ef8770422dd8e9b38cfe2777f866f5d03389296e173
RSA/: rsa.cpp  rsa.h  test.cpp
common/cpp/crypto/: skenc_common.cpp
config/: graphene_config.toml  graphene_wpe_config.toml  kme_config.toml  singleton_enclave_config.toml  wpe_config.toml
docker/: 0.6_HW_POOL.yaml  Dockerfile  HW_POOL.yaml  SIM_POOL.yaml
docker/compose/: avalon-pool.yaml
docs/: TestingFabricProxyModel.rst
docs/Error log/: acfe_fabric_Error.txt  setup_workerpool_ERROR.txt  worker_pool.txt
docs/kunmel/: Analyse.md  Avalon Error Log.md  Avalon-architecture.md  Flow.md  Glossary.md  work_log.md
enclave_manager/: Dockerfile
enclave_manager/avalon_enclave_manager/: sgx_work_order_request.py
enclave_manager/avalon_enclave_manager/kme/: kme_enclave_manager.py
examples/apps/: CMakeLists.txt
mywork/: spec.yaml
mywork/vars/: JoinRequest_org0-example-com.json  JoinRequest_org1-example-com.json  certs.tgz  envsettings  genesis.block  mychannel.genesis.block  mychannel.tx  org0-example-com_Anchor.tx  org1-example-com_Anchor.tx  vscode.tgz
outTEE_workload/: CMakeLists.txt  build.sh  guo  otest  redecrptdemo.cpp  test.cpp  worker_test.sh
outTEE_workload/common/: CMakeLists.txt  crypto_helper.cpp
outTEE_workload/crypto/: CMakeLists.txt  Makefile  crypto_helper.cpp  crypto_helper.h  crypto_utils.cpp  crypto_utils_encrypt.cpp  skenc.cpp  skenc_common.cpp
scripts/: shutdown_avalon.sh
shared_kv_storage/: README.md
(+119 files in other folders)
