CMAKE_MINIMUM_REQUIRED(VERSION 3.2)
project(Test)
find_package(OpenSSL REQUIRED)
aux_source_directory(. DIR_SRCS)
include_directories("${PROJECT_SOURCE_DIR}")
#include_directories("${PROJECT_SOURCE_DIR}/common")
#include_directories("${PROJECT_SOURCE_DIR}/packages/base64")
#include_directories("${PROJECT_SOURCE_DIR}/packages/parson")
include_directories("${PROJECT_SOURCE_DIR}/crypto")
include_directories("/usr/local/include/")
#add_subdirectory(common)
#add_subdirectory(packages/base64)
#add_subdirectory(packages/parson)
add_subdirectory(crypto)
add_executable(Demo test.cpp)
#target_link_libraries(Demo CommonFunc)
#target_link_libraries(Demo Base64Func)
#target_link_libraries(Demo ParsonFunc)
target_link_libraries(Demo CryptoFunc)
target_link_libraries(Demo OpenSSL::SSL)